# billfox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  prd.json  progress.txt  pyproject.toml
.claude/skills/billfox-cli/: SKILL.md
.claude/skills/billfox-cli/references/: receipt-model.md
.github/workflows/: ci.yml
docs/: custom-extractor.md  custom-preprocessor.md  getting-started.md  index.md  storage-and-search.md
ralph/: prd.json  progress.txt
src/billfox/: __init__.py  __main__.py  _id.py  _progress.py  _types.py  pipeline.py
src/billfox/backup/: __init__.py  _base.py  local.py
src/billfox/backup/google_drive/: __init__.py  auth.py  client.py
src/billfox/cli/: __init__.py  _helpers.py  app.py  auth.py  backup.py  init.py  llms_txt.py  receipt.py
src/billfox/embed/: __init__.py  _base.py  ollama.py  openai.py
src/billfox/extract/: __init__.py  _base.py  docling.py  mistral.py
src/billfox/models/: __init__.py  prompts.py  receipt.py
src/billfox/parse/: __init__.py  _base.py  llm.py
src/billfox/preprocess/: __init__.py  _base.py  chain.py  resize.py  yolo.py
src/billfox/source/: __init__.py  _base.py  local.py
src/billfox/store/: __init__.py  _base.py  _schema.py  _search.py  _vector.py  sqlite.py
tasks/: prd-initial-setup.md
tests/: test_backup.py  test_backup_local.py  test_cli_app.py  test_cli_backup.py  test_cli_dotenv.py  test_cli_init.py  test_cli_init_ollama.py  test_cli_parse_llm_config.py  test_cli_receipt.py  test_cli_search_config.py  test_embed_ollama.py  test_embed_openai.py  test_extract_docling.py  test_extract_mistral.py  test_id.py  test_integration.py  test_models_receipt.py  test_parse_llm.py  test_pipeline.py  test_preprocess_chain.py  test_preprocess_resize.py  test_preprocess_yolo.py  test_progress.py  test_source_local.py  test_store_search.py  test_store_sqlite.py  test_timezone.py
