[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "billfox"
dynamic = ["version"]
description = "Composable document data extraction: load, preprocess, OCR, LLM parse, store with vector search."
readme = "README.md"
license = "MIT"
authors = [{ name = "Tuong Le" }]
keywords = ["document", "extraction", "ocr", "receipt", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.13",
    "rich>=13.0",
    "tomli-w>=1.0",
    "python-dotenv>=1.0",
    "docling>=2.0",
    "httpx>=0.24",
    "python-ulid>=3.0",
    "onnxruntime>=1.16",
    "numpy>=1.24",
    "Pillow>=10.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "sqlite-vec>=0.1",
    "pydantic-ai>=0.1",
    "mistralai>=1.0",
    "openai>=1.0",
    "anthropic>=0.40",
    "google-api-python-client>=2.80",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.0",
]

[project.urls]
Homepage = "https://github.com/billfox-ai/billfox"
Repository = "https://github.com/billfox-ai/billfox"
Issues = "https://github.com/billfox-ai/billfox/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.5",
    "ruff>=0.1",
    "coverage>=7.0",
]

[project.scripts]
billfox = "billfox.cli:app"

[tool.hatch.version]
path = "src/billfox/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "receipts/",
    "ralph/",
    "tasks/",
    "tests/",
    "docs/",
    ".claude/",
    ".github/",
    "Makefile",
    "mkdocs.yml",
    "CONTRIBUTING.md",
    "CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/billfox"]
artifacts = ["src/billfox/preprocess/model/*.onnx"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "docling.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mistralai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic_ai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "onnxruntime.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlite_vec.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google_auth_oauthlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "googleapiclient.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
